--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
     //权限
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    //竖向滚动ViewPager
+    implementation project(path: ':library')
 }
